--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
 
-    <script src="index.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.26.0/slimselect.min.js"></script>
   </body>
 </html>
